feat: completed search and filter date range on news API
